js/js.translator/testData/incremental/invalidation/interfaceWithDefaultParams/lib1/l1.1.kt
interface InterfaceA {
    fun functionA(x: Int, s: String, b: Boolean?): Int
}
